<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.About">

    <FrameLayout
        android:id="@+id/frameLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/Base.Theme.Velik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="40dp"
            android:text="@string/menu_about"
            android:textColor="?attr/colorSecondary"
            android:textSize="18sp" />

        <ImageView
            android:theme="@style/Base.Theme.Velik"
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:paddingHorizontal="40dp"
            app:srcCompat="@drawable/logo"
            app:tint="?attr/colorSecondary" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="26dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutTop">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/about_background_top">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                app:tint="?attr/colorSecondary"
                android:src="@drawable/logo" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="bottom"
            android:background="@drawable/about_background_bottom">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="?attr/colorSecondary"
                android:text="@string/about_string_bottom" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_margin="20dp"
            android:textSize="14sp"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/about_string" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>