<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Home">

    <FrameLayout
        android:id="@+id/frameLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/Base.Theme.Velik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="40dp"
            android:text="@string/menu_home"
            android:textColor="?attr/colorSecondary"
            android:textSize="18sp" />

        <ImageView
            android:theme="@style/Base.Theme.Velik"
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:paddingHorizontal="40dp"
            app:srcCompat="@drawable/logo"
            app:tint="?attr/colorSecondary" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="26dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:background="@drawable/about_background_start">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo"
                    app:tint="?attr/colorSecondary" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textColor="@color/cardview_dark_background"
                android:text="@string/home_string_bicycle" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/watchAll"
            android:layout_marginBottom="6dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="26dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:text="@string/watch_all"
            android:textColor="?attr/colorSecondary"
            android:textSize="18sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBikesHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>